[gd_scene load_steps=19 format=3 uid="uid://dvhud3fband4r"]

[ext_resource type="Texture2D" uid="uid://dp32duuqu4emf" path="res://scenes/game_objects/player/player.png" id="1_0ooxu"]
[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_4k4ng"]
[ext_resource type="PackedScene" uid="uid://bjs5xabw88l1c" path="res://scenes/component/health_component.tscn" id="2_y2gj3"]
[ext_resource type="PackedScene" uid="uid://yb3agepfwuii" path="res://scenes/component/player_hit_flash.tscn" id="3_cafx5"]
[ext_resource type="PackedScene" uid="uid://doh2qecs110l4" path="res://scenes/abilities/sword_ability_controller/sword_ability_controller.tscn" id="3_gmyng"]
[ext_resource type="PackedScene" uid="uid://whrsootsiypi" path="res://scenes/component/random_stream_player_2d.tscn" id="4_bqaqr"]
[ext_resource type="Shader" path="res://scenes/component/player_hit_flash.gdshader" id="5_2iqj4"]
[ext_resource type="AudioStream" uid="uid://daxkur7wng7a2" path="res://assets/audio/player_hurt_3.wav" id="5_7y3b3"]

[sub_resource type="Animation" id="Animation_kkfxq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Sprite2D:material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_n0ixb"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.757858, 2.92817, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.2), Vector2(1.3, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vck46"]
_data = {
"RESET": SubResource("Animation_kkfxq"),
"walk": SubResource("Animation_n0ixb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14crm"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpnen"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfl1a"]
resource_local_to_scene = true
shader = ExtResource("5_2iqj4")
shader_parameter/lerp_percent = 0.0
shader_parameter/color = Vector3(1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_yub0n"]
radius = 32.0

[sub_resource type="SphereMesh" id="SphereMesh_cng6q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5px35"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_45nw1"]
radius = 6.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_4k4ng")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vck46")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_y2gj3")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("3_gmyng")]

[node name="HurtAudioPlayer" parent="." instance=ExtResource("4_bqaqr")]
streams = Array[AudioStream]([ExtResource("5_7y3b3")])

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_14crm")
theme_override_styles/fill = SubResource("StyleBoxFlat_wpnen")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PlayerHitFlash" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_cafx5")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_vfl1a")

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_yub0n")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_0ooxu")
offset = Vector2(0, -8)

[node name="Shield" type="MeshInstance2D" parent="Visuals/Sprite2D"]
modulate = Color(0.490196, 0.619608, 0.796078, 0.509804)
show_behind_parent = true
position = Vector2(0, -7)
scale = Vector2(22, 22)
mesh = SubResource("SphereMesh_cng6q")

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_5px35")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_45nw1")
